--- a/contact.html
+++ b/contact.html
@@ -205,89 +205,42 @@
             frameborder="0" style="border:0" allowfullscreen=""></iframe>
     </div>
 
-<!--//contact-->
+ <!-- 底部start -->
   <!--/w3l-footer-29-main-->
   <section class="w3l-footer-29-main">
     <div class="footer-29 py-5">
       <div class="container py-lg-4">
         <div class="row footer-top-29">
           <div class="footer-list-29 col-lg-4">
-            <h6 class="footer-title-29">About Company</h6>
-            <p class="pr-lg-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit beatae laudantium
-              voluptate rem ullam dolore nisi voluptatibus esse quasi.Integer sit amet mattis quam.</p>
-            <div class="main-social-footer-29 mt-4">
-              <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
-              <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
-              <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
-              <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
-            </div>
+			  <div class="pr-lg-5">
+			  	<img src="assets/images/inntra_logo.png"  title="云南云创数据技术有限公司" alt="">
+			  </div>
+			  
+			  <div class="main-social-footer-29 mt-4">
+				  <h6 class="footer-title-29">云南云创数据技术有限公司</h6>
+			  </div>
           </div>
-
-          <div class="col-lg-2 col-md-6 col-sm-4 footer-list-29 footer-2 mt-lg-0 mt-5">
-
+          <div class="col-lg-5 col-md-6 col-sm-4 footer-list-29 footer-2 mt-lg-0 mt-5">
             <ul>
-              <h6 class="footer-title-29">Useful Links</h6>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="#"> Blog posts</a></li>
-              <li><a href="contact.html">Contact us</a></li>
+              <h6 class="footer-title-29">联系我们</h6>
+              <li><a href="index.html">地址: 昆明市高新区科高路1999号君浩大厦A座22楼</a></li>
+              <li><a href="about.html">邮编: 650101</a></li>
+              <li><a href="services.html">电话: 0871-65511073</a></li>
+              <li><a href="#">传真: 0871-65511020</a></li>
             </ul>
-          </div>
-          <div class="col-lg-3 col-md-6 footer-list-29 footer-3 mt-lg-0 mt-5">
-            <ul>
-              <h6 class="footer-title-29">Services</h6>
-              <li>
-                <a href="#url">
-                  Furniture Chairs
-                </a>
-              </li>
-              <li>
-                <a href="#url">
-                  Three Seater Sofas
-                </a>
-              </li>
-              <li>
-                <a href="#url">
-                  Dining Tables
-                </a>
-              </li>
-              <li>
-                <a href="#url">
-                  Office Chairs
-                </a>
-              </li>
-              <li>
-                <a href="#url">
-                  Kitchen Cabinets
-                </a>
-              </li>
-            </ul>
-
-
           </div>
           <div class="col-lg-3 col-md-6 col-sm-8 footer-list-29 footer-1 mt-lg-0 mt-5">
-            <h6 class="footer-title-29">Contact Us</h6>
-            <ul>
-              <li>
-                <p><span class="fa fa-map-marker"></span> Livefloor, #49436 block, #888 Honey rd
-                  Newyork</p>
-              </li>
-              <li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(21)-255-999-8888</a></li>
-              <li><a href="mailto:Livefloor@mail.com" class="mail"><span class="fa fa-envelope-open-o"></span>
-                  Livefloor@mail.com</a></li>
-            </ul>
+            <<img src="assets/images/weixin/wx.png" title="云南云创数据技术有限公司" alt="">
           </div>
-
         </div>
       </div>
     </div>
   </section>
-
+<!-- 备案信息start -->
   <section class="w3l-footer-29-main w3l-copyright">
     <div class="container">
       <div class="bottom-copies">
-        <p class="copy-footer-29 text-center">Copyright &copy; 2020.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+        <p class="copy-footer-29 text-center">©2020 by inntra.org.cn 版权所有 滇ICP备20006488号-2</p>
       </div>
     </div>
 
@@ -295,6 +248,11 @@
     <button onclick="topFunction()" id="movetop" title="Go to top">
       <span class="fa fa-angle-up"></span>
     </button>
+	
+	<!-- Template JavaScript -->
+	<script src="assets/js/jquery-3.3.1.min.js"></script>
+	<script src="assets/js/theme-change.js"></script>
+	<script src="assets/js/owl.carousel.js"></script>
     <script>
       // When the user scrolls down 20px from the top of the document, show the button
       window.onscroll = function () {
@@ -328,9 +286,114 @@
   </script>
   <!-- disable body scroll which navbar is in active -->
 
-  <!-- Template JavaScript -->
-  <script src="assets/js/jquery-3.3.1.min.js"></script>
-  <script src="assets/js/theme-change.js"></script>
+ 
+  <!-- script for banner slider-->
+  <script>
+    $(document).ready(function () {
+      $('.owl-one').owlCarousel({
+        loop: true,
+        margin: 0,
+        nav: false,
+        responsiveClass: true,
+        autoplay: true,
+        autoplayTimeout: 5000,
+        autoplaySpeed: 1000,
+        autoplayHoverPause: false,
+        responsive: {
+          0: {
+            items: 1,
+            nav: false
+          },
+          480: {
+            items: 1,
+            nav: false
+          },
+          667: {
+            items: 1,
+            nav: true
+          },
+          1000: {
+            items: 1,
+            nav: true
+          }
+        }
+      })
+    })
+  </script>
+  <!-- //script -->
+  <!-- script for tesimonials carousel slider -->
+  <script>
+    $(document).ready(function () {
+      $("#owl-demo1").owlCarousel({
+        loop: true,
+        margin: 20,
+        nav: false,
+        responsiveClass: true,
+        responsive: {
+          0: {
+            items: 1,
+            nav: false
+          },
+          736: {
+            items: 1,
+            nav: false
+          },
+          1000: {
+            items:1,
+            nav: false,
+            loop:true
+          }
+        }
+      })
+    })
+  </script>
+  <!-- //script for tesimonials carousel slider -->
+  <!-- stats number counter-->
+  <script src="assets/js/jquery.waypoints.min.js"></script>
+  <script src="assets/js/jquery.countup.js"></script>
+  <script>
+    $('.counter').countUp();
+  </script>
+  <!-- //stats number counter -->
+  <!-- video popup -->
+  <script src="assets/js/jquery.magnific-popup.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('.popup-with-zoom-anim').magnificPopup({
+        type: 'inline',
+
+        fixedContentPos: false,
+        fixedBgPos: true,
+
+        overflowY: 'auto',
+
+        closeBtnInside: true,
+        preloader: false,
+
+        midClick: true,
+        removalDelay: 300,
+        mainClass: 'my-mfp-zoom-in'
+      });
+
+      $('.popup-with-move-anim').magnificPopup({
+        type: 'inline',
+
+        fixedContentPos: false,
+        fixedBgPos: true,
+
+        overflowY: 'auto',
+
+        closeBtnInside: true,
+        preloader: false,
+
+        midClick: true,
+        removalDelay: 300,
+        mainClass: 'my-mfp-slide-bottom'
+      });
+    });
+  </script>
+  <!-- //video popup -->
+
   <!--/MENU-JS-->
   <script>
     $(window).on("scroll", function () {
@@ -352,7 +415,7 @@
 			$(this).find("div").hide();
 		}
 	});
-
+	
     //Main navigation Active Class Add Remove
     $(".navbar-toggler").on("click", function () {
       $("header").toggleClass("active");
@@ -373,5 +436,6 @@
   <script src="assets/js/bootstrap.min.js"></script>
 
 </body>
+ <!-- 底部end -->
 
 </html>
